; ModuleID = '/home/carl/AnghaBench/libgit2/tests/refs/extr_read.c_assert_is_tag.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/refs/extr_read.c_assert_is_tag.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_repo = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @assert_is_tag to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @assert_is_tag(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* @g_repo, align 4
  %7 = load i8*, i8** %3, align 8
  %8 = call i32 @git_reference_lookup(i32** %5, i32 %6, i8* %7)
  %9 = call i32 @cl_git_pass(i32 %8)
  %10 = load i32, i32* %4, align 4
  %11 = load i32*, i32** %5, align 8
  %12 = call i32 @git_reference_is_tag(i32* %11)
  %13 = call i32 @cl_assert_equal_i(i32 %10, i32 %12)
  %14 = load i32*, i32** %5, align 8
  %15 = call i32 @git_reference_free(i32* %14)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_reference_lookup(i32**, i32, i8*) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1

declare dso_local i32 @git_reference_is_tag(i32*) #1

declare dso_local i32 @git_reference_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
